MechSite - Version 1.0 13/05/2021 Modifiche: -perfezionato Front-End con piccole migliorie sparse; -perfezionati controlli per ricerche nulle/senza risultati -aggiunto meccanismo di salvataggio dei log su file ".txt"

--- a/templates/accessoclienti.html
+++ b/templates/accessoclienti.html
@@ -2,11 +2,13 @@
 {% block title%}Login{% endblock %}
 {% block pagecontent %}
 <center>
-<h1 class="titoli">Esegui l'accesso</h1>
+  <br>
+<h1 class="titoli">Accesso</h1>
+<br>
 <div class="log">
   <form class="" action="" method="post">
     <div class="input-group mb-3">
-      <input type="email" class="form-control scrittebase" placeholder="Inserisci la tua email" name="email" aria-describedby="basic-addon2">
+      <input type="email" class="form-control border-dark scrittebase" placeholder="Inserisci la tua email" name="email" aria-describedby="basic-addon2">
       <div class="input-group-append">
         <button class="btn btn-outline-primary scrittebase" name="sub" type="submit">Accedi</button>
       </div>
