--- a/templates/addmezzi.html
+++ b/templates/addmezzi.html
@@ -3,9 +3,9 @@
 {%  block pagecontent %}
 <br>
 <div class="superiore">
-  <div class="card border-dark mb-3">
-    <h4 class="card-header titoli">Nuovo Mezzo</h4>
-    <div class="card-body text-dark">
+  <div class="card border-dark text-black bg-white mb-3 ombradialde">
+    <h4 class="card-header bg-primary text-white titoli">Nuovo Mezzo</h4>
+    <div class="card-body bg-white text-dark">
       <form method="POST">
         <div class="form-row">
           <div class="form-group col-md-6">
