--- a/templates/riparazioni.html
+++ b/templates/riparazioni.html
@@ -2,7 +2,8 @@
 {% block title%}Riparazioni{% endblock %}
 {% block pagecontent %}
 <center>
-<h1 class="titoli">Riparazioni in corso</h1>
+  <br>
+<h1 class="titoli">Riparazioni Attive</h1>
 <br>
 <div class="container">
   <!-- Print in loop dei bottoni/lista di tutte le Riparazioni -->
