--- a/templates/template-cliente.html
+++ b/templates/template-cliente.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}"
     <meta charset="utf-8">
@@ -16,26 +16,26 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/riparazioniclienti">MechSite</a>
+      <a class="navbar-brand titoli" href="/riparazioniclienti">MechSite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/riparazioniclienti">Le Mie Riparazioni</a>
+            <a class="nav-link titoli" href="/riparazioniclienti">Le Mie Riparazioni</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/mezziclienti">I Miei Mezzi</a>
+            <a class="nav-link titoli" href="/mezziclienti">I Miei Mezzi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profilo">Profilo</a>
+            <a class="nav-link titoli" href="/profilo">Profilo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/modificaprofilo">Modifica Profilo</a>
+            <a class="nav-link titoli" href="/modificaprofilo">Modifica Profilo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/logoutcliente">Logout</a>
+            <a class="nav-link titoli" href="/logoutcliente">Logout</a>
           </li>
       </ul>
     </div>
