--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #f8f9fa;
+  background-color: #f0f0f0;
 }
 .shadowbox p{
   margin: 1px;
@@ -36,12 +36,12 @@ body{
 
 .superiore{
   margin: auto;
-  width: 40vw;
+  width: 50vw;
 }
 
 .superioregestionale{
   margin: auto;
-  width: 70vw;
+  width: 80vw;
 }
 
 h1{
@@ -76,22 +76,20 @@ h4{
 }
 
 .alzati{
-  padding-top: 12.75px;
-  padding-bottom: 12.75px;
-  margin-bottom: 0px;
-}
-.alzatidai{
-  padding-top: 22.6px;
-  padding-bottom: 22.1px;
-  margin-bottom: 0px;
+  border-color: #f0f0f0;
 }
 
+.alzatidai{
+  border-color: #f0f0f0;
+  height: 38px
+}
+/*
 .alzatidaidai{
   padding-top: 19px;
   padding-bottom: 22.1px;
   margin-bottom: 0px;
 }
-
+*/
 #centrati{
   text-align: center;
 }
@@ -101,7 +99,7 @@ h4{
 }
 
 .list-group button{
-  background-color: #f8f9fa;
+  background-color: #f0f0f0;
 }
 
 .list-group button:hover{
@@ -109,12 +107,30 @@ h4{
   color: white;
 }
 
+.list-group-item{
+  background-color: #f0f0f0;
+}
+
+.sis{
+  background-color: white;
+}
+
+.sis:hover{
+  background-color: #007bff;;
+  color: white;
+}
+
 .titoli {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .scrittebase {
   font-family: 'Montserrat', sans-serif;
+}
+
+.ombradialde{
+  -webkit-box-shadow: 10px 9px 7px -7px rgba(0,0,0,0.57);
+box-shadow: 10px 9px 7px -7px rgb(0 0 0 / 57%);
 }
 
 @media only screen and (max-width: 700px) and (min-width: 100px){
