--- a/templates/addriparazioni.html
+++ b/templates/addriparazioni.html
@@ -3,9 +3,9 @@
 {%  block pagecontent %}
 <br>
 <div class="superiore">
-  <div class="card border-dark mb-3">
-    <h4 class="card-header titoli">Nuova Riparazione</h4>
-    <div class="card-body text-dark">
+  <div class="card border-dark text-black bg-white mb-3 ombradialde">
+    <h4 class="card-header bg-primary text-white titoli">Nuova Riparazione</h4>
+    <div class="card-body bg-white text-dark">
       <form class="" action="" method="POST">
         <div class="form-group">
           <label for="exampleFormControlTextarea1" class="scrittebase">Descrizione</label>
