--- a/templates/gestionale.html
+++ b/templates/gestionale.html
@@ -4,6 +4,7 @@
 {% set dev = namespace(value=0) %}
 {% set dev1 = namespace(value=0) %}
 {% set dev2 = namespace(value=0) %}
+<br>
 <h1 class="titoli">Gestionale</h1>
 <br>
 <center>
@@ -69,11 +70,11 @@
 
             <div class="form-group col-md-2">
               {%if dev.value==0%}
-                <label id="john" for="inlineFormInputName2">iiiiixxxxx</label>
+                <label id="john" for="inlineFormInputName2">iiiiixxxxxx</label>
               {%else%}
                 <label class="sr-only" for="inlineFormInputName2"></label>
               {%endif%}
-                <input id="gue" name={{item._id}} class="btn btn-primary btn-outline-primary" type="submit" value="Conferma modifica">
+                <input id="gue" name={{item._id}} class="btn btn-primary btn-outline-primary scrittebase" type="submit" value="Conferma modifica">
             </div>
 
             <div id="franco" class="form-group col-md-1">
@@ -82,7 +83,7 @@
               {%else%}
                 <label class="sr-only" for="inlineFormInputName2"></label>
               {%endif%}
-              <input id="paolo" name={{item._id ~ "delete"}} class="btn btn-outline-danger" type="submit" value="Elimina">
+              <input id="paolo" name={{item._id ~ "delete"}} class="btn btn-outline-danger scrittebase" type="submit" value="Elimina">
             </div>
           </div>
         </form>
@@ -125,7 +126,7 @@
 
             <div class="form-group col-md-2">
               {%if dev1.value==0%}
-                <label for="inlineFormInputName2" class="scrittebase">Cilandrata</label>
+                <label for="inlineFormInputName2" class="scrittebase">Cilindrata</label>
               {%else%}
                 <label class="sr-only scrittebase" for="inlineFormInputName2">Cilindrata</label>
               {%endif%}
@@ -341,7 +342,7 @@
 
             <div class="form-group col-md-2">
               {%if dev1.value==0%}
-                <label for="inlineFormInputName2" class="scrittebase">Cilandrata</label>
+                <label for="inlineFormInputName2" class="scrittebase">Cilindrata</label>
               {%else%}
                 <label class="sr-only scrittebase" for="inlineFormInputName2">Cilindrata</label>
               {%endif%}
@@ -449,7 +450,7 @@
     </div>
   </div>
 </div>
-<a href="{{ url_for('static', filename="blank.pdf") }}">File</a>
+<a href="{{ url_for('static', filename="log.txt") }}" target="_blank">File</a>
 
 {% if frase!="" %}
 <div class="card text-white bg-danger mb-3 scrittebase" style="max-width: 18rem;">
