--- a/templates/mezziclienti.html
+++ b/templates/mezziclienti.html
@@ -1,26 +1,36 @@
 {% extends "template-cliente.html" %}
 {% block title%}Riparazioni{% endblock %}
 {% block pagecontent %}
+{% set dev = namespace(value=1) %}
 <center>
-<h1>I tuoi mezzi</h1>
+  <br>
+<h1 class="titoli">Mezzi Personali</h1>
 <br>
 {% if frase=="Non hai nessun Mezzo registrato" %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-  <div class="card-header">{{frase}}</div>
+  <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {% endif %}
+
 {% for item in listamezzi %}
-<div class="superiore">
-  <div class="card border-dark mb-3">
-  <h4 class="card-header">{{item.targa}}</h4>
-  <div class="card-body text-dark">
-    <p class="card-text">Modello: {{item.marca}} {{item.modello}}</p>
-    <p class="card-text">Cilindrata: {{item.cilindrata}} cc</p>
-    <p class="card-text">Potenza: {{item.potenza}} CV</p>
+{% if (dev.value-1) % 3==0%}
+<div class="card-columns" style="width:90%;">
+{% endif %}
+  <div class="card border-dark text-black bg-white mb-3 ombradialde" style="width: 100%; height: 17rem;">
+    <div class="card-header bg-primary text-white titoli"><b>Mezzo</b></div>
+    <div class="card-body bg-white">
+      <br>
+      <h5 class="card-title scrittebase">Targa: {{item.targa}}</h5>
+      <p class="card-text scrittebase">Modello: {{item.marca}} {{item.modello}}</p>
+      <p class="card-text scrittebase">Cilindrata: {{item.cilindrata}} cc</p>
+      <p class="card-text scrittebase">Potenza: {{item.potenza}} CV</p>
+    </div>
   </div>
-</div>
+{% if dev.value % 3==0 and dev.value!=0 or item==listamezzi[-1]%}
 </div>
 <br>
+{% endif %}
+{% set dev.value = dev.value + 1 %}
 {% endfor %}
 </center>
 {%endblock %}
