--- a/templates/passwordclienti.html
+++ b/templates/passwordclienti.html
@@ -3,35 +3,37 @@
 {% block pagecontent %}
 <center>
 {% if controllo==0 %}
-<h1>Primo accesso</h1>
-<p>Questo è il tuo primo accesso al nostro sito, completa la registrazione scegliendo una password</p>
+<h1 class="titoli">Primo accesso</h1>
+<p class="scrittebase">Questo è il tuo primo accesso al nostro sito, completa la registrazione scegliendo una password</p>
 <div class="log">
   <form class="" action="" method="post">
     <div class="form-group">
-      <label for="exampleInputEmail1">Password</label>
-      <input type="password" name="password" class="form-control" placeholder="Inserisci password">
+      <label class="scrittebase" for="exampleInputEmail1">Password</label>
+      <input type="password" name="password" class="form-control scrittebase" placeholder="Inserisci password">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Conferma password</label>
-      <input type="password" name="passwordrepeat" class="form-control"  placeholder="Reinserisci password">
+      <label class="scrittebase" for="exampleInputPassword1">Conferma password</label>
+      <input type="password" name="passwordrepeat" class="form-control scrittebase"  placeholder="Reinserisci password">
     </div>
-    <button type="submit" name="primapassword" class="btn btn-primary">Accedi</button>
+    <button type="submit" name="primapassword" class="btn btn-primary scrittebase">Accedi</button>
   </form>
 </div>
 <br>
 {% if frase=="Password non coincidono" %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-  <div class="card-header">{{frase}}</div>
+  <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {%endif%}
 {% elif controllo==1 %}
-<h1>Esegui l'accesso</h1>
+<br>
+<h1 class="titoli">Accesso</h1>
+<br>
 <div class="log">
 <form class="" action="" method="post">
   <div class="input-group mb-3">
-    <input type="password" class="form-control" placeholder="Inserisci la password" name="password" aria-describedby="basic-addon2">
+    <input type="password" class="form-control border-dark scrittebase" placeholder="Inserisci la password" name="password" aria-describedby="basic-addon2">
     <div class="input-group-append">
-      <button class="btn btn-outline-primary" name="accessopassword" type="submit">Accedi</button>
+      <button class="btn btn-outline-primary scrittebase" name="accessopassword" type="submit">Accedi</button>
     </div>
   </div>
 </form>
@@ -39,7 +41,7 @@
 <br>
 {% if frase=="Password Errata" %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-  <div class="card-header">{{frase}}</div>
+  <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {%endif%}
 {% endif %}
