--- a/templates/profilocliente.html
+++ b/templates/profilocliente.html
@@ -2,18 +2,21 @@
 {% block title%}Home{% endblock %}
 {% block pagecontent %}
 <center>
-<h1 class="titoli">Il tuo profilo</h1>
+  <br>
+<h1 class="titoli">Profilo Personale</h1>
 <br>
 <div class="container">
   <div class="row">
     <div class="col-sm">
-        <h5 class="alzati scrittebase">Nome</h5>
-        <h5 class="alzati scrittebase">Cognome</h5>
-        <h5 class="alzati scrittebase">Codice Fiscale</h5>
-        <h5 class="alzati scrittebase">Email</h5>
-        <h5 class="alzati scrittebase">Numero di telefono</h5>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item alzati scrittebase">Nome</li>
+        <li class="list-group-item alzati scrittebase">Cognome</li>
+        <li class="list-group-item alzati scrittebase">Codice Fiscale</li>
+        <li class="list-group-item alzati scrittebase">Email</li>
+        <li class="list-group-item alzati scrittebase">Numero di telefono</li>
+      </ul>
     </div>
-    <div class="col-sm">
+    <div class="sf col-sm">
       <ul class="list-group list-group-flush">
         <li class="list-group-item scrittebase">{{cliente.nome}}</li>
         <li class="list-group-item scrittebase">{{cliente.cognome}}</li>
@@ -26,7 +29,7 @@
 </div>
 <br>
 <form class="" action="" method="post">
-  <input name="sub" class="btn btn-primary btn-outline-primary scrittebase" type="submit" value="Modifica profilo">
+  <input name="sub" class="btn btn-primary btn-outline-primary btn-lg scrittebase" type="submit" value="Modifica profilo">
 </form>
 <br>
 </center>
