--- a/templates/riparazioniclienti.html
+++ b/templates/riparazioniclienti.html
@@ -1,8 +1,10 @@
 {% extends "template-cliente.html" %}
 {% block title%}Riparazioni{% endblock %}
 {% block pagecontent %}
+{% set dev = namespace(value=1) %}
 <center>
-<h1 class="titoli">Riparazioni dei tuoi mezzi</h1>
+  <br>
+<h1 class="titoli">Riparazioni Personali</h1>
 <br>
 
 {% if controllo==0 %}
@@ -10,7 +12,7 @@
   <div class="superioregestionale">
     <form class="" action="" method="POST">
       <div class="input-group">
-        <select name="scelta" class="custom-select scrittebase" id="inputGroupSelect04">
+        <select name="scelta" class="custom-select scrittebase border-dark" id="inputGroupSelect04">
           <option selected>Tutte</option>
           <option>In corso</option>
           <option>Terminate</option>
@@ -23,48 +25,41 @@
   </div>
 </center>
 <br>
-{% if frase=="Nessun Record Trovato" %}
+
+{% for item in listariparazioni %}
+{% if (dev.value-1) % 3==0%}
+<div class="card-columns" style="width:90%;">
+{% endif %}
+  <div class="card border-dark text-black bg-white mb-3 ombradialde" style="width: 100%; height: 17rem;">
+    <div class="card-header bg-primary text-white titoli"><b>Riparazione</b></div>
+    <div class="card-body bg-white">
+      <h5 class="card-title scrittebase">{{item.descrizione}}</h5>
+      <p class="card-text scrittebase">Inizio: {{item.inizio[0:16]}}</p>
+      <p class="card-text scrittebase">Fine: {{item.fine[0:16]}}</p>
+      <p class="card-text scrittebase">Prezzo: {{item.prezzo}}</p>
+      <p class="card-text scrittebase">Targa: {{item.targa}}</p>
+    </div>
+  </div>
+{% if dev.value % 3==0 and dev.value!=0 or item==listariparazioni[-1]%}
+</div>
+<br>
+{% endif %}
+{% set dev.value = dev.value + 1 %}
+{% endfor %}
+{% if dev.value==1 %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
   <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {% endif %}
-{% for item in listariparazioni %}
-{% if item.fine=="in corso..." %}
-<div class="superiore">
-<div class="card border-dark mb-3">
-    <h4 class="card-header titoli">{{item.descrizione}}</h4>
-    <div class="card-body text-dark">
-      <p class="card-text scrittebase">Mezzo: {{item.marca}} {{item.modello}}</p>
-      <p class="card-text scrittebase">Targa del mezzo: {{item.targa}}</p>
-      <p class="card-text scrittebase">Data presa in incarico: {{item.inizio[0:16]}}</p>
-      <p class="card-text scrittebase">Riparazione ancora {{item.fine[0:16]}}</p>
-      <p class="card-text scrittebase">Costo riparazione: {{item.prezzo}} €</p>
-    </div>
-</div>
-</div>
-<br>
-{% elif item.fine!="in corso..." %}
-<div class="superiore">
-<div class="card border-dark mb-3">
-    <h4 class="card-header titoli">{{item.descrizione}}</h4>
-    <div class="card-body text-dark">
-      <p class="card-text scrittebase">Mezzo: {{item.marca}} {{item.modello}}</p>
-      <p class="card-text scrittebase">Targa del mezzo: {{item.targa}}</p>
-      <p class="card-text scrittebase">Data presa in incarico: {{item.inizio[0:16]}}</p>
-      <p class="card-text scrittebase">Data fine riparazione: {{item.fine[0:16]}}</p>
-      <p class="card-text scrittebase">Costo riparazione: {{item.prezzo}} €</p>
-    </div>
-</div>
-</div>
-<br>
-{% endif %}
-{% endfor %}
+
+
+
 {% elif controllo==1 %}
 <center>
   <div class="superioregestionale">
     <form class="" action="" method="POST">
       <div class="input-group">
-        <select name="scelta" class="custom-select scrittebase" id="inputGroupSelect04">
+        <select name="scelta" class="custom-select scrittebase border-dark" id="inputGroupSelect04">
           <option selected>In corso</option>
           <option>Tutte</option>
           <option>Terminate</option>
@@ -77,35 +72,43 @@
   </div>
 </center>
 <br>
-{% if frase=="Nessun Record Trovato" %}
+
+{% for item in listariparazioni %}
+{% if item.fine=="in corso..." %}
+{% if (dev.value-1) % 3==0%}
+<div class="card-columns" style="width:90%;">
+{% endif %}
+  <div class="card border-dark text-black bg-white mb-3 ombradialde" style="width: 100%; height: 17rem;">
+    <div class="card-header bg-primary text-white titoli"><b>Riparazione</b></div>
+    <div class="card-body bg-white">
+      <h5 class="card-title scrittebase">{{item.descrizione}}</h5>
+      <p class="card-text scrittebase">Inizio: {{item.inizio[0:16]}}</p>
+      <p class="card-text scrittebase">Fine: {{item.fine[0:16]}}</p>
+      <p class="card-text scrittebase">Prezzo: {{item.prezzo}}</p>
+      <p class="card-text scrittebase">Targa: {{item.targa}}</p>
+    </div>
+  </div>
+{% if dev.value % 3==0 and dev.value!=0 or item==listariparazioni[-1]%}
+</div>
+<br>
+{% endif %}
+{% set dev.value = dev.value + 1 %}
+{% endif %}
+{% endfor %}
+{% if dev.value==1 %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
   <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {% endif %}
-{% for item in listariparazioni %}
-{% if item.fine=="in corso..." %}
-<div class="superiore">
-<div class="card border-dark mb-3">
-    <h4 class="card-header titoli">{{item.descrizione}}</h4>
-    <div class="card-body text-dark">
-      <p class="card-text scrittebase">Mezzo: {{item.marca}} {{item.modello}}</p>
-      <p class="card-text scrittebase">Targa del mezzo: {{item.targa}}</p>
-      <p class="card-text scrittebase">Data presa in incarico: {{item.inizio[0:16]}}</p>
-      <p class="card-text scrittebase">Riparazione ancora {{item.fine[0:16]}}</p>
-      <p class="card-text scrittebase">Costo riparazione: {{item.prezzo}} €</p>
-    </div>
-</div>
-</div>
-<br>
-{% endif %}
-{% endfor %}
+
+
 
 {% elif controllo==2 %}
 <center>
   <div class="superioregestionale">
     <form class="" action="" method="POST">
       <div class="input-group">
-        <select name="scelta" class="custom-select scrittebase" id="inputGroupSelect04">
+        <select name="scelta" class="custom-select scrittebase border-dark" id="inputGroupSelect04">
           <option selected>Terminate</option>
           <option>Tutte</option>
           <option>In corso</option>
@@ -118,35 +121,43 @@
   </div>
 </center>
 <br>
-{% if frase=="Nessun Record Trovato" %}
+
+{% for item in listariparazioni %}
+{% if item.fine!="in corso..." %}
+{% if (dev.value-1) % 3==0%}
+<div class="card-columns" style="width:90%;">
+{% endif %}
+  <div class="card border-dark text-black bg-white mb-3 ombradialde" style="width: 100%; height: 19rem;">
+    <div class="card-header bg-primary text-white titoli"><b>Riparazione</b></div>
+    <div class="card-body bg-white">
+      <h5 class="card-title scrittebase">{{item.descrizione}}</h5>
+      <p class="card-text scrittebase">Inizio: {{item.inizio[0:16]}}</p>
+      <p class="card-text scrittebase">Fine: {{item.fine[0:16]}}</p>
+      <p class="card-text scrittebase">Prezzo: {{item.prezzo}}</p>
+      <p class="card-text scrittebase">Targa: {{item.targa}}</p>
+    </div>
+  </div>
+{% if dev.value % 3==0 and dev.value!=0 or item==listariparazioni[-1]%}
+</div>
+<br>
+{% endif %}
+{% set dev.value = dev.value + 1 %}
+{% endif %}
+{% endfor %}
+{% if dev.value==1 %}
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
   <div class="card-header scrittebase">{{frase}}</div>
 </div>
 {% endif %}
-{% for item in listariparazioni %}
-{% if item.fine!="in corso..." %}
-<div class="superiore">
-<div class="card border-dark mb-3">
-    <h4 class="card-header titoli">{{item.descrizione}}</h4>
-    <div class="card-body text-dark">
-      <p class="card-text scrittebase">Mezzo: {{item.marca}} {{item.modello}}</p>
-      <p class="card-text scrittebase">Targa del mezzo: {{item.targa}}</p>
-      <p class="card-text scrittebase">Data presa in incarico: {{item.inizio[0:16]}}</p>
-      <p class="card-text scrittebase">Data fine riparazione: {{item.fine[0:16]}}</p>
-      <p class="card-text scrittebase">Costo riparazione: {{item.prezzo}} €</p>
-    </div>
-</div>
-</div>
-<br>
-{% endif %}
-{% endfor %}
+
+
 
 {% else %}
 <center>
   <div class="superioregestionale">
     <form class="" action="" method="POST">
       <div class="input-group">
-        <select name="scelta" class="custom-select scrittebase" id="inputGroupSelect04">
+        <select name="scelta" class="custom-select scrittebase border-dark" id="inputGroupSelect04">
           <option selected>Tutte</option>
           <option>In corso</option>
           <option>Terminate</option>
