--- a/templates/template.html
+++ b/templates/template.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <script src="{{url_for('static', filename='script.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}"
@@ -20,29 +20,29 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/riparazioni">MechSite</a>
+      <a class="navbar-brand titoli" href="/riparazioni">MechSite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/riparazioni">Riparazioni</a>
+            <a class="nav-link scrittebase" href="/riparazioni">Riparazioni</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/storico">Storico</a>
+            <a class="nav-link scrittebase" href="/storico">Bacheca</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="/aggiuntariparazioni">Aggiunta Riparazioni</a>
+          <a class="nav-link scrittebase" href="/aggiuntariparazioni">Aggiunta Riparazioni</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/aggiuntaclienti">Aggiunta Clienti</a>
+          <a class="nav-link scrittebase" href="/aggiuntaclienti">Aggiunta Clienti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/aggiuntamezzi">Aggiunta Mezzi</a>
+          <a class="nav-link scrittebase" href="/aggiuntamezzi">Aggiunta Mezzi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gestionale">Gestionale</a>
+          <a class="nav-link scrittebase" href="/gestionale">Gestionale</a>
         </li>
       </ul>
     </div>
